<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    tools:context=".MailActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:hint="@string/email"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:hint="@string/cc"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/cc"/>

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/body"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/subject"/>

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButtonsTheme"
        android:layout_marginTop="42dp"
        android:text="@string/send_an_email"
        app:layout_constraintTop_toBottomOf="@id/body"/>


</androidx.constraintlayout.widget.ConstraintLayout>